--- a/actividad4.html
+++ b/actividad4.html
@@ -15,6 +15,7 @@
             <a href="actividad4.html">Actividad IV</a>
         </nav>
     </header>
+    <center><h1>Comics</h1></center>
     <figure>
         <img src="img/spider.jpg" alt="Spider-Man" /><br>
         <figcaption>Spider-Man: The Lost Hunt #5<br>
@@ -36,7 +37,7 @@
             Pak, Roberson</figcaption>
     </figure>
     <div class="divm">
-        <h1>Movies</h1>
+        <center><h1>Movies</h1></center>
         <figure>
             <img src="img/dsm.jpg" alt="Doctor Strange" /><br>
         </figure>
@@ -45,6 +46,11 @@
         </figure>
         <figure>
             <img src="img/qu.jpg" alt="Ant-Man" /><br>
+        </figure>
+        <figure>
+            <strong>Titan Books and Marvel Studios Celebrate the Very Beginning of the ‘Infinity Saga’ Movies</strong><br><br>
+            Titan Books is collaborating with Marvel Studios to mark the 15th anniversary of the birth of the Marvel Cinematic Universe’s Infinity Saga! Starting this June, Titan Books will be reissuing a revised collector's edition set of all 24 art books originally published to accompany the movies, beginning with Marvel Studios' Iron Man, the film that started it all.<br><br>
+            The books will be reissued in the same order that they were originally published, beginning with Iron Man: The Art of the Movie, out June 27, 2023, and finishing with Marvel’s Avengers: Endgame: The Art of the Movie in 2025.
         </figure>
     </div>
 </body>
