Ajuste a tamaños inferiores e imagenes actividad 4

--- a/actividad4.html
+++ b/actividad4.html
@@ -15,7 +15,7 @@
             <a href="actividad4.html">Actividad IV</a>
         </nav>
     </header>
-    <center><h1>Comics</h1></center>
+    <center><h1>Comics y Peliculas</h1></center>
     <figure>
         <img src="img/spider.jpg" alt="Spider-Man" /><br>
         <figcaption>Spider-Man: The Lost Hunt #5<br>
@@ -31,26 +31,26 @@
         <figcaption>Doctor Strange #1<br>
             Mackay, Ferry</figcaption>
     </figure>
-    <figure>
-        <img src="img/dv.jpg" alt="Darth Vader" /><br>
-        <figcaption>Star Wars: Darth Vader #32<br>
-            Pak, Roberson</figcaption>
-    </figure>
+    
     <div class="divm">
-        <center><h1>Movies</h1></center>
         <figure>
-            <img src="img/dsm.jpg" alt="Doctor Strange" /><br>
+            <img src="img/dv.jpg" alt="Darth Vader" /><br>
+            <figcaption>Star Wars: Darth Vader #32<br>
+                Pak, Roberson</figcaption>
         </figure>
         <figure>
-            <img src="img/bp.jpg" alt="Black Panther" /><br>
+            <p>El Dr. Stephen Strange abre un portal al multiverso al utilizar un hechizo prohibido. Ahora, su equipo debe enfrentarse a una amenaza que podría destruirlo todo.</p><img src="img/dsm.jpg" alt="Doctor Strange" /><br>
         </figure>
         <figure>
-            <img src="img/qu.jpg" alt="Ant-Man" /><br>
+            <p>Tras la muerte de T'Challa, la reina Ramonda, Shuri, M'Baku, Okoye y las Dora Milaje protegen Wakanda de la injerencia de las potencias mundiales.</p><img src="img/bp.jpg" alt="Black Panther" /><br>
         </figure>
         <figure>
-            <strong>Titan Books and Marvel Studios Celebrate the Very Beginning of the ‘Infinity Saga’ Movies</strong><br><br>
-            Titan Books is collaborating with Marvel Studios to mark the 15th anniversary of the birth of the Marvel Cinematic Universe’s Infinity Saga! Starting this June, Titan Books will be reissuing a revised collector's edition set of all 24 art books originally published to accompany the movies, beginning with Marvel Studios' Iron Man, the film that started it all.<br><br>
-            The books will be reissued in the same order that they were originally published, beginning with Iron Man: The Art of the Movie, out June 27, 2023, and finishing with Marvel’s Avengers: Endgame: The Art of the Movie in 2025.
+            <p>Los superhéroes Scott y Cassie Lang, Hope van Dyne y sus padres, se encuentran accidentalmente atrapados en el reino cuántico y deben enfrentarse a un nuevo enemigo, Kang el Conquistador.</p><img src="img/qu.jpg" alt="Ant-Man" /><br>
+        </figure>
+        <figure>
+            <strong>Titan Books y Marvel Studios celebran el comienzo de las películas ‘ Infinity Saga ’</strong><br><br>
+            Titan Books está colaborando con Marvel Studios para conmemorar el 15 aniversario del nacimiento del Universo Cinemático Marvel Saga infinita! A partir de este junio, Titan Books volverá a emitir un conjunto revisado de edición de coleccionista de los 24 libros de arte publicados originalmente para acompañar las películas, comenzando con Marvel Studios' Iron Man, la película que lo comenzó todo.<br><br>
+            Los libros serán reeditados en el mismo orden en que se publicaron originalmente, comenzando con Iron Man: el arte de la película, fuera 27 de junio de 2023, y terminando con Marvel's Vengadores: Fin del juego: El arte de la película en 2025.
         </figure>
     </div>
 </body>
