--- a/actividad4.html
+++ b/actividad4.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="Index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="actividad1.html">Actividad I</a>
             <a href="actividad2.html">Actividad II</a>
             <a href="actividad3.html">Actividad III</a>
